2012-09-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-util.el: Fix compilation error on XEmacs 21.4.

2012-09-06  Juri Linkov  <juri@jurta.org>

	* gnus-group.el (gnus-read-ephemeral-gmane-group): Change the naming
	scheme for buffer names to be more consistent with other group and
	article buffer names in Gnus.

2012-09-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-util.el
	(gnus-put-text-property-excluding-characters-with-faces): Removed.

	* gnus-compat.el: Define compat function `add-face' from Wolfgang
	Jenkner.

	* gnus-group.el (gnus-group-highlight-line): Use combining faces.

	* gnus-sum.el (gnus-summary-highlight-line): Ditto.

	* gnus-salt.el (gnus-tree-highlight-node): Ditto.

2012-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-score.el (gnus-score-decode-text-parts): Use #' for
	mm-text-parts used in labels macro to make it work with XEmacs 21.5.

	* gnus-util.el (gnus-string-prefix-p): New function, an alias to
	string-prefix-p in Emacs >=23.2.

	* nnmaildir.el (nnmaildir--ensure-suffix, nnmaildir--add-flag)
	(nnmaildir--remove-flag, nnmaildir--scan): Use gnus-string-match-p
	instead of string-match-p.
	(nnmaildir--scan): Use gnus-string-prefix-p instead of string-prefix-p.

2012-09-06  Kenichi Handa  <handa@gnu.org>

	* qp.el (quoted-printable-decode-region): Fix previous change; handle
	lowercase a..f.

2012-09-05  Magnus Henoch  <magnus.henoch@gmail.com>

	* nnmaildir.el (nnmaildir--article-set-flags): Fix compilation error.

2012-09-05  Martin Stjernholm  <mast@lysator.liu.se>

	* nnimap.el (nnimap-request-move-article): Decode the group name when
	doing internal moves to avoid charset issues.

	* gnus-demon.el (gnus-demon-init): Fixed regression when IDLE is t and
	TIME is set.

2012-09-05  Juri Linkov  <juri@jurta.org>

	* gnus-group.el (gnus-read-ephemeral-bug-group): Allow opening more
	than one group at a time (bug#11961).

2012-09-05  Julien Danjou  <julien@danjou.info>
