@@ -1,3 +1,12 @@
+2012-09-07  Chong Yidong  <cyd@gnu.org>
+
+	* gnus-util.el
+	(gnus-put-text-property-excluding-characters-with-faces): Restore.
+
+	* gnus-salt.el (gnus-tree-highlight-node):
+	* gnus-sum.el (gnus-summary-highlight-line):
+	* gnus-group.el (gnus-group-highlight-line): Revert use of add-face.
+
 2012-09-06  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-util.el: Fix compilation error on XEmacs 21.4.
